<resources>
    <string name="app_name">HWG File Manager</string>

    <string name="request_permission_text">App need some permissions</string>
    <string name="request_permission_button_text">Request</string>

    <string name="icon">icon</string>
    <string name="name">name</string>
    <string name="close_tab">Close Tab</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="properties">Properties</string>
    <string name="compress">Compress</string>
    <string name="extract_to">Extract to</string>
    <string name="more">More</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="view">View</string>
    <string name="clipboard">ClipBoard</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="zip">zip</string>
    <string name="_7z">7z</string>
    <string name="current_location">Current location</string>
    <string name="custom_location">Custom location</string>
    <string name="path">Path</string>
    <string name="cancel">Cancel</string>
    <string name="create_file_or_folder">Create File Or Folder</string>
    <string name="create">Create</string>

    <string name="button_new">new</string>
    <string name="button_search">search</string>
    <string name="button_refresh">refresh</string>
    <string name="button_view">view</string>
    <string name="up_folder_button">up</string>
</resources>