<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compress"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/format_choise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:checkedButton="@id/zip"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name">

        <RadioButton
            android:id="@+id/zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="3dp"
            android:paddingRight="16dp"
            android:paddingBottom="3dp"
            android:text="@string/zip"
            android:textColor="@color/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/seven_z"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:enabled="false"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="3dp"
            android:paddingRight="16dp"
            android:paddingBottom="3dp"
            android:text="@string/_7z"
            android:textColor="@color/radio_flat_text_selector" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/path_choise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/current_location"
        app:layout_constraintTop_toBottomOf="@id/format_choise">

        <RadioButton
            android:id="@+id/current_location_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/current_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/current_location" />

        <RadioButton
            android:id="@+id/custom_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_location" />

        <EditText
            android:id="@+id/path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/path"
            android:importantForAutofill="no"
            android:inputType="textFilter" />

    </RadioGroup>

    <Button
        android:id="@+id/compress_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/compress"
        app:layout_constraintTop_toBottomOf="@id/path_choise" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/compress_button" />

</androidx.constraintlayout.widget.ConstraintLayout>