<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar_files_base"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:contentDescription="@string/button_new"
            android:minHeight="48dp"
            app:srcCompat="@drawable/add" />

        <ImageButton
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:contentDescription="@string/button_search"
            android:minHeight="48dp"
            app:srcCompat="@drawable/search" />

        <ImageButton
            android:id="@+id/button_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:contentDescription="@string/button_refresh"
            android:minHeight="48dp"
            app:srcCompat="@drawable/refresh" />

        <ImageButton
            android:id="@+id/button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:contentDescription="@string/button_view"
            android:minHeight="48dp"
            app:srcCompat="@drawable/view_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>